apps/grav-allevatoriumbri/overlays/staging/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grav-allevatoriumbri
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: grav
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
          startupProbe:
            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 1
            successThreshold: 1
            failureThreshold: 6
